
2005/05/13: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_Buffer_Crop() now adjusts the pos pointer if it is left behind the end
  of the buffer by truncating


2005/05/06: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- decreased verbosity in HTTP code


2005/05/01: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- typemaker is now able to create enums (including _toString and _fromString
  functions, reading and writing values as strings from/to GWEN_DBs)


===========================================================================
MARK: released gwenhywfar-1.12.1 (2005/04/30)
===========================================================================


2005/04/30: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_NetConnectionHTTP:
  - added state GWEN_NETCONNHTTP_STATE_IGNOREMSG which is used to ignore
    intermediate HTTP responses (like 100)
  - added mode GWEN_NETCONN_MODE_RAW. If this is on then all messages received
    are forwarded to the application. If it is off (default) then intermediate
    messages (like 100) are ignored. This should make the OFX plugin of
    AqBanking work.
  - fixed a bug in this new code (now works)


2005/04/27: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_CryptToken_fromXml()
  Since the CryptToken stuff is not yet officially part of the API SO_CURRENT
  doesn't have to be incremented.
- added definition GWEN_WAITCALLBACK_PROGRESS_NONE to GWEN_WaitCallback


2005-04-26   Christian Stimming <stimming@tuhh.de>

	* src/crypt/crypt.c, src/crypt/md.c,
	src/crypt/ossl/nettransportssl.c, src/ipc/ipc.c,
	src/parser/xsd_write.c: Add casts from and to unsigned char to fix
	gcc4 warnings about "pointer differ in signedness". Since those
	casts are accepted implicitly in earlier gccs, we expect that this