@@ -1,3 +1,14 @@
+  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
+  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
+  ------------------------------------------------------------------------
+
+
+2005/05/17: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- added function GWEN_XMLNode_GetLocalizedCharValue()
+- GWEN_PluginDescription_new() now uses localized version of elements in
+  XML file
+
 
 2005/05/13: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
